@@ -1,3 +1,8 @@
+2003-02-25  Alan Modra  <amodra@bigpond.net.au>
+
+	* Makefile.am: Run "make dep-am".
+	* Makefile.in: Regenerate.
+
 2003-02-24  Kris Warkentin  <kewarken@qnx.com>
 
 	* elf.c (elfcore_read_notes): Add check for QNX style core file.
